grasping proposal server

--- a/inference_test.ipynb
+++ b/inference_test.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,6 +33,15 @@
     "depth = cv2.imread('./example_imgs/depth_image.png', cv2.IMREAD_GRAYSCALE)\n",
     "#depth[depth==depth.max()] = 0\n",
     "#img[depth==0] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('./example_imgs/depth_image.npy', depth, allow_pickle=True, fix_imports=True)"
    ]
   },
   {
@@ -90,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.15 s, sys: 64.1 ms, total: 1.21 s\n",
+      "CPU times: user 1.13 s, sys: 75.5 ms, total: 1.2 s\n",
       "Wall time: 1.19 s\n"
      ]
     }
